# Regression

./: README.md  gcv.py  model.py  plot_regression.py  pyproject.toml  requirements.txt  setup.py  test.py  tests.py  utils.py
src/LinReg/: __init__.py  gcv.py  model.py  plot_regression.py  utils.py
src/linreg_pro.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
