[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linreg_pro"
version = "0.1.0"
authors = [
  { name="Samuel Remeljej", email="sremeljej@gmail.com" },
]
description = "A comprehensive suite for Ridge, Linear, and Polynomial regression with GCV optimization."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]